# bazel-example-sops-gpg

./: BUILD.bazel  README.md  WORKSPACE
.github/workflows/: bazel.yml
gpg/: BUILD.bazel
sops_data/: BUILD.bazel  sops-encrypt.bzl  sops-encrypt.sh.tpl
